# advent-challenge

./: pyproject.toml
day-1/: main.py
day-2/: main.py
day-3/: instance.txt  main.py
