[project]
name = "advent-challenge"
version = "0.1.0"
description = "List of solutions for Advent of Code challenges"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.4.2",
    "ortools>=9.11.4210",
    "polars>=1.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]
